// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartContainer Component renders correctly 1`] = `
<div
  className=""
>
  <div
    className="flexbox cart"
  >
    <h5>
      Order Cart
    </h5>
    <button
      className="btn title-button"
    >
      ✖
    </button>
  </div>
  <div
    className="responsive-table"
  >
    <table
      className="table"
    >
      <thead>
        <tr>
          <th>
            Meal Title
          </th>
          <th>
            Price (₦)
          </th>
          <th>
            Quantity
          </th>
          <th>
            Subtotal (₦)
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <mockConstructor
          addClass=""
          clearCart={[MockFunction]}
          dispatch={[MockFunction]}
          id="abc"
          key="abc"
          notify={[MockFunction]}
          orderError=""
          orderId="abc"
          price={1200}
          quantity={1}
          setQuantity={[Function]}
        />
        <mockConstructor
          addClass=""
          clearCart={[MockFunction]}
          dispatch={[MockFunction]}
          id="def"
          key="def"
          notify={[MockFunction]}
          orderError=""
          orderId="abc"
          price={2000}
          quantity={1}
          setQuantity={[Function]}
        />
      </tbody>
      <caption
        className="flexbox-cart"
      >
        <div
          className="flexbox"
        >
          <div
            className="flexbox info"
          >
            <p>
               Order Total 
            </p>
            <p>
               ₦
              3200
            </p>
          </div>
          <div
            className="flexbox info"
          >
            <button
              className="btn btn-cart"
              onClick={[Function]}
            >
              Modify Order
            </button>
            <button
              className="btn btn-cart"
              onClick={[MockFunction]}
            >
              Clear Cart
            </button>
          </div>
        </div>
      </caption>
    </table>
  </div>
</div>
`;

exports[`CartContainer Component renders correctly 2`] = `
<div
  className="string"
>
  <div
    className="flexbox cart"
  >
    <h5>
      Order Cart
    </h5>
    <button
      className="btn title-button"
    >
      ✖
    </button>
  </div>
  <div
    className="responsive-table"
  >
    <table
      className="table"
    >
      <thead>
        <tr>
          <th>
            Meal Title
          </th>
          <th>
            Price (₦)
          </th>
          <th>
            Quantity
          </th>
          <th>
            Subtotal (₦)
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <mockConstructor
          addClass="string"
          clearCart={[MockFunction]}
          dispatch={[MockFunction]}
          id="abc"
          key="abc"
          notify={[MockFunction]}
          orderError=""
          orderId="abc"
          price={1200}
          quantity={1}
          setQuantity={[Function]}
        />
        <mockConstructor
          addClass="string"
          clearCart={[MockFunction]}
          dispatch={[MockFunction]}
          id="def"
          key="def"
          notify={[MockFunction]}
          orderError=""
          orderId="abc"
          price={2000}
          quantity={1}
          setQuantity={[Function]}
        />
      </tbody>
      <caption
        className="flexbox-cart"
      >
        <div
          className="flexbox"
        >
          <div
            className="flexbox info"
          >
            <p>
               Order Total 
            </p>
            <p>
               ₦
              3200
            </p>
          </div>
          <div
            className="flexbox info"
          >
            <button
              className="btn btn-cart"
              onClick={[Function]}
            >
              Modify Order
            </button>
            <button
              className="btn btn-cart"
              onClick={[MockFunction]}
            >
              Clear Cart
            </button>
          </div>
        </div>
      </caption>
    </table>
  </div>
</div>
`;
